tests/integration/text_document/snapshots/integration__text_document__document_symbol__enumerate_nested.snap
---
source: tests/integration/text_document/document_symbol.rs
assertion_line: 36
expression: "find_symbols(r#\"\n%TEX main.tex\n%SRC \\documentclass{article}\n%SRC \n%SRC \\begin{document}\n%SRC \n%SRC \\begin{enumerate}\n%SRC     \\item\\label{it:foo} Foo\n%SRC     \\item\\label{it:bar} Bar\n%SRC     \\item[Baz] Baz\n%SRC     \\item[Qux]\\label{it:qux} Qux\n%SRC \\end{enumerate}\n%SRC \n%SRC \\end{document}\n\n%TEX main.aux\n%SRC \\relax\n%SRC \\newlabel{it:foo}{{1}{1}}\n%SRC \\newlabel{it:qux}{{2}{1}}\n\"#,\n        serde_json::json!({\n                \"textDocument\" :\n                {\n                    \"documentSymbol\" :\n                    { \"hierarchicalDocumentSymbolSupport\" : true, },\n                },\n            }))?"
---
[
  {
    "name": "Enumerate",
    "kind": 10,
    "deprecated": false,
    "range": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 15
      }
    },
    "selectionRange": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 9,
        "character": 15
      }
    },
    "children": [
      {
        "name": "Item",
        "detail": "it:foo",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 5,
            "character": 4
          },
          "end": {
            "line": 5,
            "character": 27
          }
        },
        "selectionRange": {
          "start": {
            "line": 5,
            "character": 9
          },
          "end": {
            "line": 5,
            "character": 23
          }
        },
        "children": []
      },
      {
        "name": "Item",
        "detail": "it:bar",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 6,
            "character": 4
          },
          "end": {
            "line": 6,
            "character": 27
          }
        },
        "selectionRange": {
          "start": {
            "line": 6,
            "character": 9
          },
          "end": {
            "line": 6,
            "character": 23
          }
        },
        "children": []
      },
      {
        "name": "Baz",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 7,
            "character": 4
          },
          "end": {
            "line": 7,
            "character": 18
          }
        },
        "selectionRange": {
          "start": {
            "line": 7,
            "character": 4
          },
          "end": {
            "line": 7,
            "character": 18
          }
        },
        "children": []
      },
      {
        "name": "Qux",
        "detail": "it:qux",
        "kind": 22,
        "deprecated": false,
        "range": {
          "start": {
            "line": 8,
            "character": 4
          },
          "end": {
            "line": 8,
            "character": 32
          }
        },
        "selectionRange": {
          "start": {
            "line": 8,
            "character": 14
          },
          "end": {
            "line": 8,
            "character": 28
          }
        },
        "children": []
      }
    ]
  }
]
