tests/integration/text_document/snapshots/integration__text_document__document_symbol__float_nested.snap
---
source: tests/integration/text_document/document_symbol.rs
assertion_line: 189
expression: result.response
---
[
  {
    "name": "Figure: Foo",
    "detail": "fig:foo",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 7,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 17
      },
      "end": {
        "line": 6,
        "character": 32
      }
    },
    "children": []
  },
  {
    "name": "Figure: Bar",
    "detail": "fig:bar",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 9,
        "character": 0
      },
      "end": {
        "line": 12,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 11,
        "character": 17
      },
      "end": {
        "line": 11,
        "character": 32
      }
    },
    "children": []
  },
  {
    "name": "Figure: Baz",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 17,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 17,
        "character": 12
      }
    },
    "children": []
  }
]
