tests/integration/text_document/snapshots/integration__text_document__document_symbol__section_flat.snap
---
source: tests/integration/text_document/document_symbol.rs
assertion_line: 316
expression: result.response
---
[
  {
    "name": "Foo",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 4,
          "character": 13
        }
      }
    }
  },
  {
    "name": "Bar",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 6,
          "character": 0
        },
        "end": {
          "line": 8,
          "character": 31
        }
      }
    }
  },
  {
    "name": "Baz",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 8,
          "character": 0
        },
        "end": {
          "line": 8,
          "character": 31
        }
      }
    }
  }
]
